[tool.poetry]
name = "tron"
version = "0.1.0"
description = ""
authors = ["Newiee"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic-settings = ">=2.10.1,<3.0.0"
fastapi = ">=0.116.1,<0.117.0"
sqlalchemy = ">=2.0.42,<3.0.0"
alembic = ">=1.16.4,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2 = ">=2.9.10,<3.0.0"
uvicorn = "^0.35.0"
tronpy = "^0.6.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
aiosqlite = "^0.21.0"

[[tool.poetry.packages]]
include = "app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
